--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ name = "backend_placeholder"
 version = "1.0.0"
 requires-python = ">=3.13"
 
+[project.dependencies]
+boto3 = ">=1.34.0"
+
 [tool.setuptools.packages.find]
 where = ["lib"]
 
