--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ name = "backend_placeholder"
 version = "1.0.0"
 requires-python = ">=3.13"
 
-[project.dependencies]
-boto3 = ">=1.34.0"
+dependencies = [
+  "boto3>=1.34.0",
+  "pydantic",
+  "fastapi",
+]
 
 [tool.setuptools.packages.find]
 where = ["lib"]
