--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,17 @@ name = "backend_placeholder"
 version = "1.0.0"
 requires-python = ">=3.13"
 
-dependencies = [
-  "boto3>=1.34.0",
-  "pydantic",
-  "fastapi",
-  "uvicorn",
-  "python-multipart",
+[project.dependencies]
+  "boto3>=1.34.0"
+  "pydantic"
+  "fastapi"
+  "uvicorn"
+  "python-multipart"
+]
+[project.optional-dependencies]
+dev = [
   "pytest-asyncio",
 ]
-
 [tool.setuptools.packages.find]
 where = ["lib"]
 
