--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,17 @@ version = "1.0.0"
 requires-python = ">=3.13"
 
 [project.dependencies]
-  "boto3>=1.34.0"
-  "pydantic"
-  "fastapi"
-  "uvicorn"
-  "python-multipart"
-]
+boto3 = ">=1.34.0"
+pydantic = "*"
+fastapi = "*"
+uvicorn = "*"
+python-multipart = "*"
+
 [project.optional-dependencies]
 dev = [
   "pytest-asyncio",
 ]
+
 [tool.setuptools.packages.find]
 where = ["lib"]
 
