--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,15 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
+dependencies = [
+  "langchain-core",
+  "langchain-openai",
+  "langgraph",
+  "python-dotenv",
+  "pdfplumber",
+  "fastapi",
+  "uvicorn",
+]
 name = "backend_placeholder"
 version = "1.0.0"
 requires-python = ">=3.13"
