--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ where = ["lib"]
 
 [project.scripts]
 deploy-backend = "backend_placeholder.server:runner"
+
+[tool.ruff]
+extend-exclude = ["*.py"]
+force-exclude = true
+line-length = 320
+indent-width = 2
